# cosmic_web

./: .gitignore  README.md  pyproject.toml  requirements.txt
cosmic_web/: __init__.py  cosmology.py  filament.py  geometry.py  jackknife.py  mapping.py  pipeline.py
cosmic_web/coords/: __init__.py  transforms.py
cosmic_web/disperse/: __init__.py  io.py
tests/: test_disperse_io.py  test_filament.py  test_geometry.py  test_jackknife.py  test_mapping.py  test_pipeline.py  test_transforms.py
