[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic_web"
version = "0.1.0"
description = "Cosmological coordinate transformations"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "astropy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
